<resources>
    <string name="app_name">Mad Tap</string>
    <string name="mad_tap">Mad Tap</string>
    <string name="start">Start</string>
    <string name="traditional">Traditional</string>
    <string name="time_50">TIME: 50</string>
    <string name="score_0">SCORE: 0</string>
    <string name="best_0">BEST: 0</string>
    <string name="quit">Quit</string>
    <string name="restart">Restart</string>
    <string name="show_answers">Show Answers</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="play_again">Play Again</string>
    <string name="category">Category</string>
    <string name="game_mode">Game Mode</string>
    <string name="show_pinyin">Show Pinyin</string>
    <string name="show_zhuyin">Show Zhuyin</string>
    <string name="simplified">Simplified</string>
    <string name="popup_continue">Continue</string>
    <string-array name="category_array">
        <item>Fruit</item>
        <item>Numbers</item>
        <item>Money</item>
        <item>Countries</item>
        <item>Family</item>
        <item>Locations</item>
        <item>Colors</item>
        <item>Food</item>
    </string-array>
    <string-array name="mode_array">
        <item>Standard</item>
        <item>Practice</item>
        <item>Endless</item>
    </string-array>
</resources>