<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEBE0"
    android:padding="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/b_popup_zhuyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_zhuyin"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/b_popup_pinyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pinyin"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/b_popup_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_continue"
            android:background="@drawable/custom_rounded_corners"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/b_popup_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:background="@drawable/custom_rounded_corners"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/b_popup_pause_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/quit"
        android:background="@drawable/custom_rounded_corners"
        android:layout_marginStart="5dp"
        android:textSize="16sp"/>

</LinearLayout>