<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mad_tap"
        android:textSize="36sp"
        android:paddingBottom="50dp"
        android:layout_gravity="center"/>

<!--traditional switch is not enabled since I only have traditional characters stored-->
    <RadioGroup
        android:checkedButton="@+id/offer"
        android:id="@+id/toggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/blue_out_line"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/b_simplified"
            android:background="@drawable/toggle_widget_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/simplified"
            android:enabled="false"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/b_traditional"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/traditional"
            android:enabled="true"
            android:checked="true"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/b_zhuyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_zhuyin"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/b_pinyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pinyin"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center">
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center">
        <Spinner
            android:id="@+id/spinner_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <Button
        android:id="@+id/b_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        android:background="@drawable/custom_rounded_corners"
        android:layout_gravity="center" />

</LinearLayout>